src/parser/Parser.cpp
#include "Parser.h"

#include <algorithm>
#include <cassert>
#include "../ast/node/expression/BinaryExpression.h"
#include "../ast/node/expression/CallExpression.h"
#include "../ast/node/expression/CastExpression.h"
#include "../ast/node/expression/CharacterLiteralExpression.h"
#include "../ast/node/expression/FloatingPointLiteralExpression.h"
#include "../ast/node/expression/IdentifierExpression.h"
#include "../ast/node/expression/IntegerLiteralExpression.h"
#include "../ast/node/expression/StringLiteralExpression.h"
#include "../ast/node/expression/TernaryExpression.h"
#include "../ast/node/expression/UnaryExpression.h"
#include "../ast/node/type/ArrayType.h"
#include "../ast/node/type/ScalarType.h"
#include "../ast/node/type/FunctionType.h"
#include "../ast/node/type/PointerType.h"
#include "../ast/node/declaration/FunctionDeclaration.h"
#include "../ast/node/declaration/FunctionDefinition.h"
#include "../ast/node/declaration/VariableDeclaration.h"
#include "../ast/node/statement/BreakStatement.h"
#include "../ast/node/statement/CaseStatement.h"
#include "../ast/node/statement/CompoundStatement.h"
#include "../ast/node/statement/ContinueStatement.h"
#include "../ast/node/statement/DeclarationStatement.h"
#include "../ast/node/statement/DefaultStatement.h"
#include "../ast/node/statement/DoWhileStatement.h"
#include "../ast/node/statement/ExpressionStatement.h"
#include "../ast/node/statement/ForStatement.h"
#include "../ast/node/statement/GotoStatement.h"
#include "../ast/node/statement/IfStatement.h"
#include "../ast/node/statement/LabelStatement.h"
#include "../ast/node/statement/ReturnStatement.h"
#include "../ast/node/statement/SwitchStatement.h"
#include "../ast/node/statement/WhileStatement.h"
#include "../error/ErrorHandler.h"


template<typename T>
void clearAllElem(std::vector<T> &vec) {
    vec.clear();
}

template<typename T>
void clearAllElem(std::stack<T> &stk) {
    while (!stk.empty()) {
        stk.pop();
    }
}

template<typename T>
void deleteAndClearAllElem(std::vector<T> &vec) {
    for (auto e : vec) {
        delete e;
    }
    vec.clear();
}

template<typename T>
void deleteAndClearAllElem(std::stack<T> &stk) {
    while (!stk.empty()) {
        delete stk.top();
        stk.pop();
    }
}

bool haveEmptyString(const std::vector<std::string> &strList) {
    return std::any_of(strList.begin(), strList.end(), [](const std::string &str) {
        return str.empty();
    });
}

Type *typeStack2Type(int lineNumber, int columnNumber, const std::vector<TypeQualifier> &typeQualifierList, BaseType typeSpecifier, std::stack<Type *> typeStack) {
    Type *finalType = new ScalarType(lineNumber, columnNumber, typeSpecifier, typeQualifierList);
    while (!typeStack.empty()) {
        switch (typeStack.top()->getClass()) {
            case TypeClass::ARRAY_TYPE: {
                auto *newType = (ArrayType *) typeStack.top();
                newType->elemType = finalType;
                finalType = newType;
                break;
            }
            case TypeClass::FUNCTION_TYPE: {
                auto *newType = (FunctionType *) typeStack.top();
                newType->returnType = finalType;
                finalType = newType;
                break;
            }
            case TypeClass::POINTER_TYPE: {
                auto *newType = (PointerType *) typeStack.top();
                newType->sourceType = finalType;
                finalType = newType;
                break;
            }
            case TypeClass::SCALAR_TYPE:
                assert(false);
        }
        typeStack.pop();
    }
    return finalType;
}

Parser::Parser(std::vector<Token> *tokenList) : tokenList(tokenList) {}

inline void Parser::nextToken() {
    currentIndex++;
    token = (*tokenList)[currentIndex];
    if (farthestIndex < currentIndex) {
        farthestIndex = currentIndex;
    }
}

inline void Parser::rollbackToken(int index) {
    currentIndex = index;
    token = (*tokenList)[currentIndex];
}

Expression *Parser::parsePrimaryExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    int tagIndex1 = currentIndex;
    if (token.id == TokenId::IDENTIFIER) {
        Token identifierToken = token;
        nextToken();
        return new IdentifierExpression(lineNumber, columnNumber, identifierToken.value);
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::LITERAL_INTEGER) {
        Token valueToken = token;
        nextToken();
        return new IntegerLiteralExpression(lineNumber, columnNumber, std::stoi(valueToken.value));
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::LITERAL_FLOATING_POINT) {
        Token valueToken = token;
        nextToken();
        return new FloatingPointLiteralExpression(lineNumber, columnNumber, std::stod(valueToken.value));
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::LITERAL_CHARACTER) {
        Token valueToken = token;
        nextToken();
        return new CharacterLiteralExpression(lineNumber, columnNumber, valueToken.value[0]);
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::LITERAL_STRING) {
        Token valueToken = token;
        nextToken();
        return new StringLiteralExpression(lineNumber, columnNumber, valueToken.value);
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_LEFT_PARENTHESES) {
        nextToken();
        Expression *expression = parseCommaExpression();
        if (expression != nullptr) {
            if (token.id == TokenId::PUNCTUATOR_RIGHT_PARENTHESES) {
                nextToken();
                return expression;
            }
        }
        delete expression;
    }
    rollbackToken(tagIndex1);
    return nullptr;
}

Expression *Parser::parsePostfixExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    // 匹配左侧部分
    Expression *leftOperand = parsePrimaryExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    // 循环匹配右侧部分
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_LEFT_SQUARE_BRACKETS) {
            nextToken();
            Expression *rightOperand = parseCommaExpression();
            if (rightOperand != nullptr) {
                if (token.id == TokenId::PUNCTUATOR_RIGHT_SQUARE_BRACKETS) {
                    nextToken();
                    // 把结果作为新的左侧部分
                    leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::SUBSCRIPT, leftOperand, rightOperand);
                    continue;
                }
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_LEFT_PARENTHESES) {
            nextToken();
            std::vector<Expression *> argumentList = parseAssignmentExpressionList();
            if (token.id == TokenId::PUNCTUATOR_RIGHT_PARENTHESES) {
                nextToken();
                leftOperand = new CallExpression(lineNumber, columnNumber, leftOperand, argumentList);
                continue;
            }
            deleteAndClearAllElem(argumentList);
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_INCREMENT) {
            nextToken();
            leftOperand = new UnaryExpression(lineNumber, columnNumber, UnaryOperator::POSTINCREMENT, leftOperand);
            continue;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_DECREMENT) {
            nextToken();
            leftOperand = new UnaryExpression(lineNumber, columnNumber, UnaryOperator::POSTDECREMENT, leftOperand);
            continue;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseUnaryExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    int tagIndex1 = currentIndex;
    if (token.id == TokenId::PUNCTUATOR_INCREMENT) {
        nextToken();
        Expression *operand = parseUnaryExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::PREINCREMENT, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_DECREMENT) {
        nextToken();
        Expression *operand = parseUnaryExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::PREINCREMENT, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_BITWISE_AND) {
        nextToken();
        Expression *operand = parseCastExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::TAKE_ADDRESS, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_MUL) {
        nextToken();
        Expression *operand = parseCastExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::DEREFERENCE, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_ADD) {
        nextToken();
        Expression *operand = parseCastExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::PLUS, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_SUB) {
        nextToken();
        Expression *operand = parseCastExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::MINUS, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_BITWISE_NOT) {
        nextToken();
        Expression *operand = parseCastExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::BITWISE_NOT, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::PUNCTUATOR_LOGICAL_NOT) {
        nextToken();
        Expression *operand = parseCastExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::LOGICAL_NOT, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    if (token.id == TokenId::KEYWORD_SIZEOF) {
        nextToken();
        Expression *operand = parseUnaryExpression();
        if (operand != nullptr) {
            return new UnaryExpression(lineNumber, columnNumber, UnaryOperator::SIZEOF, operand);
        }
        delete operand;
    }
    rollbackToken(tagIndex1);
    Expression *postfixExpression = parsePostfixExpression();
    if (postfixExpression != nullptr) {
        return postfixExpression;
    }
    delete postfixExpression;
    rollbackToken(tagIndex1);
    return nullptr;
}

Expression *Parser::parseCastExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    int tagIndex1 = currentIndex;
    if (token.id == TokenId::PUNCTUATOR_LEFT_PARENTHESES) {
        nextToken();
        Type *typeName = parseTypeName();
        if (typeName != nullptr) {
            if (token.id == TokenId::PUNCTUATOR_RIGHT_PARENTHESES) {
                nextToken();
                Expression *operand = parseCastExpression();
                if (operand != nullptr) {
                    return new CastExpression(lineNumber, columnNumber, typeName, operand);
                }
                delete operand;
            }
        }
        delete typeName;
    }
    rollbackToken(tagIndex1);
    Expression *unaryExpression = parseUnaryExpression();
    if (unaryExpression != nullptr) {
        return unaryExpression;
    }
    delete unaryExpression;
    rollbackToken(tagIndex1);
    return nullptr;
}

Expression *Parser::parseMultiplicativeExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseCastExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_MUL) {
            nextToken();
            Expression *rightOperand = parseCastExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::MUL, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_DIV) {
            nextToken();
            Expression *rightOperand = parseCastExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::DIV, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_MOD) {
            nextToken();
            Expression *rightOperand = parseCastExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::MOD, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseAdditiveExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseMultiplicativeExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_ADD) {
            nextToken();
            Expression *rightOperand = parseMultiplicativeExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::ADD, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_SUB) {
            nextToken();
            Expression *rightOperand = parseMultiplicativeExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::SUB, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseShiftExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseAdditiveExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_LEFT_SHIFT) {
            nextToken();
            Expression *rightOperand = parseAdditiveExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::SHIFT_LEFT, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_RIGHT_SHIFT) {
            nextToken();
            Expression *rightOperand = parseAdditiveExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::SHIFT_RIGHT, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseRelationalExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseShiftExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_LESS) {
            nextToken();
            Expression *rightOperand = parseShiftExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::LESS, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_GREATER) {
            nextToken();
            Expression *rightOperand = parseShiftExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::GREATER, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_LESS_EQUAL) {
            nextToken();
            Expression *rightOperand = parseShiftExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::LESS_EQUAL, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_GREATER_EQUAL) {
            nextToken();
            Expression *rightOperand = parseShiftExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::GREATER_EQUAL, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseEqualityExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseRelationalExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_EQUAL) {
            nextToken();
            Expression *rightOperand = parseRelationalExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::EQUAL, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        if (token.id == TokenId::PUNCTUATOR_LOGICAL_NOT_EQUAL) {
            nextToken();
            Expression *rightOperand = parseRelationalExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::NOT_EQUAL, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseAndExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseEqualityExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_BITWISE_AND) {
            nextToken();
            Expression *rightOperand = parseEqualityExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::BITWISE_AND, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseExclusiveOrExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseAndExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_EXCLUSIVE_OR) {
            nextToken();
            Expression *rightOperand = parseAndExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::BITWISE_XOR, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseInclusiveOrExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseExclusiveOrExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_BITWISE_OR) {
            nextToken();
            Expression *rightOperand = parseExclusiveOrExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::BITWISE_OR, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseLogicalAndExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseInclusiveOrExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_LOGICAL_AND) {
            nextToken();
            Expression *rightOperand = parseInclusiveOrExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::LOGICAL_AND, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseLogicalOrExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseLogicalAndExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    while (true) {
        int tagIndex1 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_LOGICAL_OR) {
            nextToken();
            Expression *rightOperand = parseLogicalAndExpression();
            if (rightOperand != nullptr) {
                leftOperand = new BinaryExpression(lineNumber, columnNumber, BinaryOperator::LOGICAL_OR, leftOperand, rightOperand);
                continue;
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex1);
        return leftOperand;
    }
}

Expression *Parser::parseConditionalExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    Expression *leftOperand = parseLogicalOrExpression();
    if (leftOperand == nullptr) {
        return nullptr;
    }
    int tagIndex1 = currentIndex;
    if (token.id == TokenId::PUNCTUATOR_QUESTION) {
        nextToken();
        Expression *middleOperand = parseCommaExpression();
        if (middleOperand != nullptr) {
            if (token.id == TokenId::PUNCTUATOR_SEMICOLON) {
                nextToken();
                Expression *rightOperand = parseConditionalExpression();
                if (rightOperand != nullptr) {
                    return new TernaryExpression(lineNumber, columnNumber, TernaryOperator::CONDITION, leftOperand, middleOperand, rightOperand);
                }
                delete rightOperand;
            }
        }
        delete middleOperand;
    }
    rollbackToken(tagIndex1);
    return leftOperand;
}

Expression *Parser::parseAssignmentExpression() {
    int lineNumber = token.lineNumber;
    int columnNumber = token.columnNumber;
    int tagIndex1 = currentIndex;
    Expression *leftOperand = parseUnaryExpression();
    if (leftOperand != nullptr) {
        int tagIndex2 = currentIndex;
        if (token.id == TokenId::PUNCTUATOR_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_MUL_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::MUL_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_DIV_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::DIV_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_MOD_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::MOD_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_ADD_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::ADD_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_SUB_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::SUB_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_LEFT_SHIFT_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::SHIFT_LEFT_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_RIGHT_SHIFT_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::SHIFT_RIGHT_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_BITWISE_AND_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::BITWISE_AND_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_EXCLUSIVE_OR_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::BITWISE_XOR_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
        rollbackToken(tagIndex2);
        if (token.id == TokenId::PUNCTUATOR_BITWISE_OR_ASSIGN) {
            nextToken();
            Expression *rightOperand = parseAssignmentExpression();
            if (rightOperand != nullptr) {
                return new BinaryExpression(lineNumber, columnNumber, BinaryOperator::BITWISE_OR_ASSIGN, leftOperand, rightOperand);
            }
            delete rightOperand;
        }
    }
    delete leftOperand;
    rollbackToken(tagIndex1);
    Expression *conditionalExpression = parseConditionalExpression();
    if (conditionalExpression != nullptr) {
        return conditionalExpression;
    }
    delete conditionalExpression;
    rollbackToken(tagIndex1);
    return nullptr;
}
